Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,22 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Ceo'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "upper\"Ceo\" # 'CEO'"
+    "position = \"Ceo\" # 'CEO'\n"
    ]
   },
   {
