--- a/index.ipynb
+++ b/index.ipynb
@@ -240,14 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
-    "print('vandelay.com' # 'www.vandelay.com'"
+    "print('www.' + 'vandelay.com') # 'www.vandelay.com'"
    ]
   },
   {
