--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "number = \"7285553334\" # 728\n",
+    "number[:]"
    ]
   },
   {
